--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -5,9 +5,9 @@ sp:
 spring:
   application:
     name: user-service
-  cloud:
-    config:
-      override-none: true
+#  cloud:
+#    config:
+#      override-none: true
     
 server:
   port: 8101
